--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -74,7 +74,7 @@
     "```\n",
     "\n",
     "```{note}\n",
-    "It is good to notice that for the strength we did not use the compressive strength, but the tensile strength of the concrete, as the latter is rather lower than the former. In the first dimensioning of beam loaded in bending, the tension stresses in the concrete will quickly become so high that reinforcement will take over, as we will see below. We will also provide a rule of thumb to approximate the amount of bending reinforcement necessary.\n",
+    "It is good to notice that for the strength we did not use the _compressive_ but the _tensile_ strength of the concrete, as the latter is rather lower than the former. In a beam loaded on bending, the tension stresses in the part of the concrete generally that is under tension (that is: below the neutral line for a positive bending moment) are much higher than the tensile strength, so that reinforcement will need to take over, as we will see below. For this reason we will also provide a rule of thumb to approximate the amount of bending reinforcement necessary. You could even skip the check on bending stresses and directly move on to determining the reinforcement.\n",
     "```"
    ]
   },
@@ -96,9 +96,9 @@
     "````\n",
     "\n",
     "The load on the beam consists of three components:\n",
-    "- $q_{self}$ = self-weight of the concrete\n",
-    "- $q_{pl}$ = permanent load, such as self-weight of the floor, ceiling, ducts and pipes, floor finishings, etc.\n",
-    "- $q_{vl}$ = variable load, such as people or furniture\n",
+    "- $q_{self}$ = self-weight of the concrete (calculated above)\n",
+    "- $q_{opl}$ = other permanent loads, such as self-weight of the floor, ceiling, ducts and pipes, floor finishings, etc.\n",
+    "- $q_{ivl}$ = imposed variable load, such as people or furniture\n",
     "\n",
     "```{figure} Images/Loads_Beam.jpg\n",
     "---\n",
@@ -106,18 +106,13 @@
     "---\n",
     "```\n",
     "\n",
-    "$q_{eg}$ and $q_{rb}$ together form the permanent load $q_G$. The imposed load $q_{ob}$ is the variable load $q_Q$. For beam verification, the loads must be calculated per linear meter on the beam, unless the load is applied as a point load on the beam. We assume a uniformly distributed load.\n",
+    "$q_{self}$ and $q_{opl}$ together form the permanent load $G_k$. The imposed variable load $q_{ivl}$ is the variable load $Q_k$ (using the abbreviations from the Eurocode). For beam verification, the loads must be calculated per linear meter on the beam, unless the load is applied as a point load on the beam. We assume a uniformly distributed load.\n",
     "\n",
     "```{note}\n",
-    "The weight of the concrete beam has also already been calculated: $q_{eg}$ = 4.5 [kN/m].\n",
-    "\n",
+    "To determine the amount of floor area resting on our beam, we use the schematic load-bearing floor plan. On it, we have shaded the area supported by the beam. All elements in the shaded area, including the weight of any secondary beams, must be included in the load. On this load-bearing floor plan we also show the actual dimensions.\n",
     "```\n",
     "\n",
-    "```{note}\n",
-    "To determine the size of the resting load, we use the schematic load-bearing floor plan. On it, we shade the area supported by the beam. All elements in the shaded area, including the weight of any secondary beams, must be included in the load. On this load-bearing floor plan we also show the dimensions!\n",
-    "```\n",
-    "\n",
-    "The resting load consists of the weight of the floor structure, including the weight of any finish layer, ceiling, installations suspended from the floor, or included in the floor structure, etc. All these loads are given in [kN/m²] or can be converted into them. For example, for a concrete overlay, the volumetric mass [kg/m³] can be converted to the volumetric weight [kN/m³]: $1 [kg/m³]$corresponds to $0.01 [kN/m³]$. The volumetric weight should then be multiplied by the layer thickness to get the load in [kN/m²]:\n",
+    "The resting load consists of the weight of the floor structure, including the weight of any finishing layer, ceiling, installations (air ducts, water pipes, electricity and data cables, also know as _building services_) suspended from the floor, or included in the floor structure, etc. All these loads are given in [kN/m²] or can be converted into them. For example, for a concrete overlay, the volumetric mass [kg/m³] can be converted to the volumetric weight [kN/m³]: $1 [kg/m³]$corresponds to $0.01 [kN/m³]$. The volumetric weight should then be multiplied by the layer thickness to get the load in [kN/m²]:\n",
     "\n",
     "$\\Rightarrow$ Load in [kN/m²] = layer thickness in meters multiplied by the load in [kN/m³].\n",
     "\n",
