--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -5,32 +5,43 @@
    "metadata": {},
    "source": [
     "# Global dimensioning beam\n",
-    "````{margin}\n",
-    "**Problem analysis**\n",
-    "```{figure} ../safety/Images/design_process_1.jpg\n",
-    "```\n",
-    "The problem is already clear.\n",
-    "\n",
-    "**Schematisation structural system**\n",
-    "```{figure} ../safety/Images/design_process_2.jpg\n",
-    "```\n",
-    "The schematisation of the structure is given on the left.\n",
-    "````\n",
-    "\n",
     "```{note}\n",
     "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
     "```\n",
     "\n",
-    "The cross-section dimensions (height x width) of a beam depend on the forces acting on it and on its span. To provide an initial estimate of the dimensions, estimation rules ('rules of thumb') or design diagrams are available. These rules of thumb are useful for a first approximation only and are mainly intended for common structures with regular loads. The more extreme the structure or the load placed on it, the more inaccurate the estimation rule. \n",
+    "The cross-section dimensions (height x width) of a beam depend on the forces acting on it and on its span. To provide an initial estimate of the dimensions, estimation rules ('rules of thumb') or design diagrams are available. These rules of thumb are useful for a first approximation only and are mainly intended for common structures with regular loads. The more extreme the structure or the load placed on it, the more inaccurate the estimation rule becomes. \n",
     "\n",
-    "For the office, we want to dimension and check a first-floor floor beam: beam B3-D3 on the schematic load-bearing construction floor plan in the figure below.\n",
+    "````{margin}\n",
+    "**Problem analysis**\n",
+    "```{figure} ../safety/Images/design_process_1.jpg\n",
+    "```\n",
+    "The problem is: we need to design the beam(s) on axis 3 that bear the first floor.\n",
     "\n",
-    "```{figure} Images/Load-Bearing_Floor_Plan_v4.jpg\n",
+    "For the office that serves as our example building, we want to dimension and check the first-floor beam(s) on axis 3 on the schematic load-bearing construction floor plan in the figure below.\n",
+    "\n",
+    "```{figure} Images/Load-Bearing_Floor_Plan_v5.jpg\n",
     "---\n",
     "scale: 75%\n",
     "---\n",
     "Schematic load-bearing floor plan, first floor office building.\n",
     "```\n",
+    "\n",
+    "The beam on axis 3 as shown in the floor plan is interupted by the column on D3. This suggest that the structural scheme of axis 3 is the top one from the two possible schemes shown in the image below. The lower one would have been a continuous beam supported in the middle.\n",
+    "\n",
+    "```{figure} Images/Structural-mechanics-scheme-beam.jpg\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
+    "Structural scheme of the beam(s) on axis 3. We choose the top one.\n",
+    "```\n",
+    "\n",
+    "\n",
+    "````{margin}\n",
+    "**Schematisation structural system**\n",
+    "```{figure} ../safety/Images/design_process_2.jpg\n",
+    "```\n",
+    "The schematisation of the structure is given on the left.\n",
+    "````\n",
     "\n",
     "````{margin}\n",
     "**Selection of material**\n",
