concrete beam berekening

--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -22,20 +22,12 @@
     "\n",
     "```{figure} Images/Load-Bearing_Floor_Plan_v5.jpg\n",
     "---\n",
-    "scale: 75%\n",
+    "scale: 90%\n",
     "---\n",
     "Schematic load-bearing floor plan, first floor office building.\n",
     "```\n",
     "\n",
     "The beam on axis 3 as shown in the floor plan is interupted by the column on D3. This suggest that the structural scheme of axis 3 is the top one from the two possible schemes shown in the image below. The lower one would have been a continuous beam supported in the middle.\n",
-    "\n",
-    "```{figure} Images/Structural-mechanics-scheme-beam.jpg\n",
-    "---\n",
-    "scale: 75%\n",
-    "---\n",
-    "Structural scheme of the beam(s) on axis 3. We choose the top one.\n",
-    "```\n",
-    "\n",
     "\n",
     "````{margin}\n",
     "**Schematisation structural system**\n",
@@ -43,6 +35,13 @@
     "```\n",
     "The schematisation of the structure is given on the left.\n",
     "````\n",
+    "\n",
+    "```{figure} Images/Structural-mechanics-scheme-beam.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
+    "Structural scheme of the beam(s) on axis 3. We choose the top one.\n",
+    "```\n",
     "\n",
     "````{margin}\n",
     "**Selection of material**\n",
@@ -54,6 +53,12 @@
     "```{figure} ../safety/Images/design_process_4.jpg\n",
     "```\n",
     "````\n",
+    "\n",
+    "In [Design guidelines > Spans in concrete](/design/concrete/spans_in_concrete.html) we can find rules of thumb for the estimation of height and width of a reinforced concrete beam. As we choose for a single span, and the beam is traditionally reinforced and not prestressed the rule of thumbs gives:\n",
+    "\\begin{gather*}\n",
+    "h = \\frac{l}{8} to \\frac{l}{12} \\\\\n",
+    "b = \\frac{h}{3} to \\frac{h}{2} \n",
+    "\\end{gather*}\n",
     "\n",
     "For concrete beams, the weight per linear meter is not always provided. To determine it we need to multiply the cross-sectional area ($b$ × $h \\ [m²]$) by the density $ρ \\ [kg/m³]$, and then multiply the result by the gravitational acceleration $9.81 \\ [m/s^2]$, often rounded to $10 \\ [m/s^2]$ for early design calculations. For reinforced concrete the density is around $2500 \\ [kg/m³]$, and for softwood approximately $300$ to $400 \\ [kg/m³]$ (depending on the timber species and strength class). The weight per linear meter $q_g$ becomes: $q_g = b × h × ρ × \\frac{10}{1000} \\ [kN/m]$ (NB: $b$ and $h$ in meters!)\n",
     "\n",
