--- a/book/design/concrete/spans_in_concrete.ipynb
+++ b/book/design/concrete/spans_in_concrete.ipynb
@@ -15,7 +15,20 @@
     "---\n",
     "---\n",
     "Spans in concrete.\n",
-    "```    "
+    "```\n",
+    "\n",
+    "\n",
+    "## Main floorbeams\n",
+    "```{figure} Images/Main_Floorbeams1.jpg\n",
+    "--- \n",
+    "---\n",
+    "Rectangular beams in cast on-site, traditionally reinforced concrete (= no prestress).\n",
+    "```  \n",
+    "$l = 2$ to $20$ m  \n",
+    "$h = 200$ to $2000$ mm  \n",
+    "$h = l/8$ to $l/12$  \n",
+    "$b = h/3$ to $h/2$  \n",
+    "------------------------------------------------------- \n"
    ]
   }
  ],
