--- a/book/design/concrete/spans_in_concrete.ipynb
+++ b/book/design/concrete/spans_in_concrete.ipynb
@@ -13,6 +13,7 @@
    "source": [
     "```{figure} Images/Spans_Concrete.jpg\n",
     "---\n",
+    "scale: 50%\n",
     "---\n",
     "Spans in concrete.\n",
     "```\n",
@@ -24,6 +25,7 @@
     "---\n",
     "Rectangular beams in cast on-site, traditionally reinforced concrete (= no prestress).\n",
     "```  \n",
+    "\n",
     "$l = 2$ to $20$ m  \n",
     "$h = 200$ to $2000$ mm  \n",
     "$h = l/8$ to $l/12$  \n",
