nog beter staal

--- a/book/design/concrete/spans_in_concrete.ipynb
+++ b/book/design/concrete/spans_in_concrete.ipynb
@@ -26,6 +26,7 @@
     "Rectangular beams in cast on-site, traditionally reinforced concrete (= no prestress).\n",
     "```  \n",
     "\n",
+    "text\n",
     "$l = 2$ to $20$ m  \n",
     "$h = 200$ to $2000$ mm  \n",
     "$h = l/8$ to $l/12$  \n",
