--- a/book/design/concrete/spans_in_concrete.ipynb
+++ b/book/design/concrete/spans_in_concrete.ipynb
@@ -4,34 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spans in concrete"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Spans in concrete\n",
     "```{figure} Images/Spans_Concrete.jpg\n",
     "---\n",
     "scale: 50%\n",
     "---\n",
-    "Spans in concrete.\n",
+    "Spans in concrete\n",
     "```\n",
     "\n",
-    "\n",
-    "## Main floorbeams\n",
     "```{figure} Images/Main_Floorbeams1.jpg\n",
     "--- \n",
+    "scale: 50%\n",
     "---\n",
-    "Rectangular beams in cast on-site, traditionally reinforced concrete (= no prestress).\n",
+    "Rectangular beams in cast on-site, traditionally reinforced concrete (= no prestress)\n",
     "```  \n",
-    "\n",
-    "text\n",
     "$l = 2$ to $20$ m  \n",
     "$h = 200$ to $2000$ mm  \n",
     "$h = l/8$ to $l/12$  \n",
     "$b = h/3$ to $h/2$  \n",
-    "------------------------------------------------------- \n"
+    "\n",
+    "-------------------------------------------------------"
    ]
   }
  ],
