--- a/book/design/concrete/spans_in_concrete.ipynb
+++ b/book/design/concrete/spans_in_concrete.ipynb
@@ -12,6 +12,7 @@
     "Spans in concrete\n",
     "```\n",
     "\n",
+    "## Dimensioning rules of thumb\n",
     "```{figure} Images/Main_Floorbeams1.jpg\n",
     "--- \n",
     "scale: 50%\n",
