--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -55,10 +55,9 @@
     "````\n",
     "\n",
     "In [Design guidelines > Spans in concrete](/design/concrete/spans_in_concrete.html) we can find rules of thumb for the estimation of height and width of a reinforced concrete beam. As we choose for a single span, and the beam is traditionally reinforced and not prestressed the rule of thumbs gives:\n",
-    "\\begin{gather*}\n",
-    "h = \\frac{l}{8} to \\frac{l}{12} \\\\\n",
-    "b = \\frac{h}{3} to \\frac{h}{2} \n",
-    "\\end{gather*}\n",
+    "\n",
+    "$h = \\frac{L}{8}$ to $\\frac{L}{12}$  \n",
+    "$b = \\frac{h}{3}$ to $\\frac{h}{2}$ \n",
     "\n",
     "For concrete beams, the weight per linear meter is not always provided. To determine it we need to multiply the cross-sectional area ($b$ × $h \\ [m²]$) by the density $ρ \\ [kg/m³]$, and then multiply the result by the gravitational acceleration $9.81 \\ [m/s^2]$, often rounded to $10 \\ [m/s^2]$ for early design calculations. For reinforced concrete the density is around $2500 \\ [kg/m³]$, and for softwood approximately $300$ to $400 \\ [kg/m³]$ (depending on the timber species and strength class). The weight per linear meter $q_g$ becomes: $q_g = b × h × ρ × \\frac{10}{1000} \\ [kN/m]$ (NB: $b$ and $h$ in meters!)\n",
     "\n",
