--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -54,7 +54,7 @@
     "```\n",
     "````\n",
     "\n",
-    "In [Design guidelines > Spans in concrete](/design/concrete/spans_in_concrete.html) we can find rules of thumb for the estimation of height and width of a reinforced concrete beam. As we choose for a single span, and the beam is traditionally reinforced and not prestressed the rule of thumbs gives:\n",
+    "In [Design guidelines > Spans in concrete](/design/concrete/spans_in_concrete) we can find rules of thumb for the estimation of height and width of a reinforced concrete beam. As we choose for a single span, and the beam is traditionally reinforced and not prestressed the rule of thumbs gives:\n",
     "\n",
     "$h = \\frac{L}{8}$ to $\\frac{L}{12}$  \n",
     "$b = \\frac{h}{3}$ to $\\frac{h}{2}$ \n",
