beton even better still

--- a/book/design/concrete/spans_in_concrete.ipynb
+++ b/book/design/concrete/spans_in_concrete.ipynb
@@ -7,9 +7,9 @@
     "## Spans in concrete\n",
     "```{figure} Images/Spans_Concrete.jpg\n",
     "---\n",
-    "scale: 50%\n",
+    "scale: 100%\n",
     "---\n",
-    "Spans in concrete\n",
+    "Spans in concrete - overview of structural typologies sorted on span\n",
     "```\n",
     "\n",
     "## Dimensioning rules of thumb\n",
@@ -19,9 +19,9 @@
     "---\n",
     "Rectangular beams in cast on-site, traditionally reinforced concrete (= no prestress)\n",
     "```  \n",
-    "$l = 2$ to $20$ m  \n",
+    "$L = 2$ to $20$ m  \n",
     "$h = 200$ to $2000$ mm  \n",
-    "$h = l/8$ to $l/12$  \n",
+    "$h = L/8$ to $L/12$  \n",
     "$b = h/3$ to $h/2$  \n",
     "\n",
     "-------------------------------------------------------"
