--- a/book/design/concrete/spans_in_concrete.ipynb
+++ b/book/design/concrete/spans_in_concrete.ipynb
@@ -19,9 +19,14 @@
     "---\n",
     "Rectangular beams in cast on-site, traditionally reinforced concrete (= no prestress)\n",
     "```  \n",
+    "Single span (beam on two support points)  \n",
     "$L = 2$ to $20$ m  \n",
     "$h = 200$ to $2000$ mm  \n",
     "$h = L/8$ to $L/12$  \n",
+    "$b = h/3$ to $h/2$  \n",
+    "\n",
+    "Multiple spans (continuous beam on 3 or more support points)  \n",
+    "$h = L/10$ to $L/15$  \n",
     "$b = h/3$ to $h/2$  \n",
     "\n",
     "-------------------------------------------------------"
