--- a/book/design/concrete/spans_in_concrete.ipynb
+++ b/book/design/concrete/spans_in_concrete.ipynb
@@ -29,6 +29,23 @@
     "$h = L/10$ to $L/15$  \n",
     "$b = h/3$ to $h/2$  \n",
     "\n",
+    "-------------------------------------------------------  \n",
+    "```{figure} Images/Prestressed_Floorbeams.jpg\n",
+    "--- \n",
+    "scale: 50%\n",
+    "---\n",
+    "Rectangular beams in cast on-site, prestressed concrete\n",
+    "```  \n",
+    "Single span (beam on two support points)  \n",
+    "$L = 2$ to $20$ m  \n",
+    "$h = 200$ to $2000$ mm  \n",
+    "$h = L/15$ to $L/20$  \n",
+    "$b = h/4$ to $h/3$  \n",
+    "\n",
+    "Multiple spans (continuous beam on 3 or more support points)  \n",
+    "$h = L/17$ to $L/22$  \n",
+    "$b = h/4$ to $h/3$  \n",
+    "\n",
     "-------------------------------------------------------"
    ]
   }
