--- a/book/design/concrete/spans_in_concrete.ipynb
+++ b/book/design/concrete/spans_in_concrete.ipynb
@@ -37,8 +37,8 @@
     "Rectangular beams in cast on-site, prestressed concrete\n",
     "```  \n",
     "Single span (beam on two support points)  \n",
-    "$L = 2$ to $20$ m  \n",
-    "$h = 200$ to $2000$ mm  \n",
+    "$L$: same\n",
+    "$h$: same\n",
     "$h = L/15$ to $L/20$  \n",
     "$b = h/4$ to $h/3$  \n",
     "\n",
