--- a/book/design/steel/steel_structures.ipynb
+++ b/book/design/steel/steel_structures.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Steel columns\n",
+    "## Steel - rules of thumb\n",
+    "\n",
+    "### Steel columns\n",
     "```{figure} Images/Steel_Columns1.jpg\n",
     "---\n",
     "---\n",
@@ -42,7 +44,7 @@
     "$d = h_{st}/6$ to $h_{st}/15$  \n",
     "\n",
     "------------------------------------------------------- \n",
-    "## Main floorbeams\n",
+    "### Main floorbeams\n",
     "```{figure} Images/Main_Floorbeams1.jpg\n",
     "--- \n",
     "---\n",
@@ -83,7 +85,7 @@
     "$h = L/20$ to $L/25$\n",
     "\n",
     "------------------------------------------------------- \n",
-    "## Floors\n",
+    "### Floors\n",
     "```{figure} Images/Composite_Floors.jpg\n",
     "--- \n",
     "---\n",
@@ -94,7 +96,7 @@
     "$h = L/25$ to $L/30\n",
     "\n",
     "------------------------------------------------------- \n",
-    "## Main roofbeams\n",
+    "### Main roofbeams\n",
     "```{figure} Images/Roofbeams1.jpg\n",
     "--- \n",
     "---\n",
@@ -143,7 +145,7 @@
     "$h = L/15$ to $L/30$  \n",
     "\n",
     "------------------------------------------------------- \n",
-    "## Purlins roofstructures\n",
+    "### Purlins roofstructures\n",
     "```{figure} Images/Purlins1.jpg\n",
     "---\n",
     "---\n",
@@ -165,7 +167,7 @@
     "\n",
     "------------------------------------------------------- \n",
     "\n",
-    "## Roofing plates\n",
+    "### Roofing plates\n",
     "```{figure} Images/Roofing_Plate1.jpg\n",
     "---\n",
     "---\n",
