--- a/book/design/concrete/spans_in_concrete.ipynb
+++ b/book/design/concrete/spans_in_concrete.ipynb
@@ -12,7 +12,9 @@
     "Spans in concrete - overview of structural typologies sorted on span\n",
     "```\n",
     "\n",
-    "## Dimensioning rules of thumb\n",
+    "## Rules of thumb\n",
+    "The 'rules of thumb' (Dutch: 'vuistregels') are to be seen as a quick way to estimate dimensions of structural members, mostly based on span. These *estimated* dimensions serve as input only for a early design stage calculation (e.g. check of capacity or deformation), after which you will use more advanced design rules (e.g. Eurocode) for a more accurate calculation. Mind that you should *not* use them the other way around, as if the rules of thumb were some law that should be respected.\n",
+    "\n",
     "```{figure} Images/Main_Floorbeams1.jpg\n",
     "--- \n",
     "scale: 50%\n",
