--- a/book/design/timber/timber_structures_and_details.ipynb
+++ b/book/design/timber/timber_structures_and_details.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Timber structures and details\n",
+    "# Rules of thumb and details\n",
+    "The 'rules of thumb' (Dutch: 'vuistregels') are to be seen as a quick way to estimate dimensions of structural members, mostly based on span. These *estimated* dimensions serve as input only for a early design stage calculation (e.g. check of capacity or deformation), after which you will use more advanced design rules (e.g. Eurocode) for a more accurate calculation. Mind that you should *not* use them the other way around, as if the rules of thumb were some law that should be respected.\n",
     "\n",
     "## Straight beam (possibly with precamber)\n",
     "```{figure} Images/straight_beam_precamber.png\n",
@@ -15,13 +16,15 @@
     "\n",
     "```{admonition} Rules of thumb\n",
     "**Solid timber beams**  \n",
-    "$l = 2 - 6 m$  \n",
-    "$h = \\frac{l}{15} - \\frac{l}{20} m$\n",
+    "$L = 2$ to $6$ m  \n",
+    "$h = \\frac{L}{15}$ to $\\frac{L}{20}$ m\n",
+    "```\n",
     "\n",
+    "```{admonition} Rules of thumb\n",
     "**Glulam (=glue-laminated) beams**  \n",
-    "$l = 6 - 30 m$  \n",
-    "$s < 5 m \\rightarrow  h = \\frac{l}{17}$  \n",
-    "$s = 5 - 8 m \\rightarrow  h = \\frac{l}{16}$\n",
+    "$L = 6$ to $30$ m  \n",
+    "$s < 5$ m $\\rightarrow  h = \\frac{L}{17}$  \n",
+    "$s = 5$ to $8$ m $\\rightarrow  h = \\frac{l}{16}$\n",
     "```\n",
     "\n",
     "```{figure} Images/straight_beam_precamber_shapes.png\n",
@@ -45,11 +48,11 @@
     "\n",
     "```{admonition} Rules of thumb\n",
     "**Glulam beams**  \n",
-    "$l = 30 m$  \n",
-    "$s = 3.6 - 5.4 m$  \n",
-    "$a = 0.25 \\cdot l \\rightarrow  h = \\frac{l}{16} - \\frac{l}{21}$  \n",
-    "$s = 3 - 5 m$  \n",
-    "$a = 0.4 \\cdot l \\rightarrow  h = \\frac{l}{18} - \\frac{l}{24}$\n",
+    "$L = 30$ m  \n",
+    "$s = 3.6$ to $5.4$ m  \n",
+    "$a = 0.25 \\cdot L \\rightarrow  h = \\frac{L}{16}$ to $\\frac{L}{21}$  \n",
+    "$s = 3$ to $5$ m  \n",
+    "$a = 0.4 \\cdot L \\rightarrow  h = \\frac{L}{18}$ to $\\frac{L}{24}$\n",
     "```\n",
     "\n",
     "```{figure} Images/straight_beam_cantilever_shapes.png\n",
@@ -73,9 +76,9 @@
     "\n",
     "```{admonition} Rules of thumb\n",
     "**Glulam beam**  \n",
-    "$l = 6 - 30 m$  \n",
-    "$h_1 = \\frac{l}{14} - \\frac{l}{18}$  \n",
-    "$h_2 = \\frac{l}{18} - \\frac{l}{22}$\n",
+    "$L = 6$ to $30$ m  \n",
+    "$h_1 = \\frac{L}{14}$ to $\\frac{L}{18}$  \n",
+    "$h_2 = \\frac{L}{18}$ to $\\frac{L}{22}$\n",
     "```\n",
     "\n",
     "```{figure} Images/saddle_roof_inclined_shapes.png\n",
@@ -99,10 +102,10 @@
     "\n",
     "```{admonition} Rules of thumb\n",
     "**Glulam beams**  \n",
-    "$l = 7 - 40 m$  \n",
-    "$s = 5 - 7 m \\rightarrow  h = \\frac{l}{14} - \\frac{l}{18}$  \n",
-    "$f = \\frac{l}{5} - \\frac{l}{10}$  \n",
-    "$r \\geq 6 m$\n",
+    "$L = 7$ to $40$ m  \n",
+    "$s = 5$ to $7 m \\rightarrow  h = \\frac{L}{14}$ to $\\frac{L}}{18}$  \n",
+    "$f = \\frac{L}}{5}$ to $\\frac{L}{10}$  \n",
+    "$r \\geq 6$ m\n",
     "```\n",
     "\n",
     "```{figure} Images/saddle_roof_curved_shapes.png\n",
@@ -132,13 +135,13 @@
     "\n",
     "```{admonition} Rules of thumb\n",
     "**Glulam beams**  \n",
-    "$l = 6 - 30 m$  \n",
-    "$s < 5 m \\rightarrow  h = \\frac{l}{34}$  \n",
-    "$s = 5 - 8 m \\rightarrow  h = \\frac{l}{30}$\n",
+    "$L = 6$ to $30$ m  \n",
+    "$s < 5$ m $\\rightarrow  h = \\frac{L}{34}$  \n",
+    "$s = 5$ to $8$ m $\\rightarrow  h = \\frac{L}{30}$\n",
     "\n",
     "**Glulam trusses**  \n",
-    "$l = 10 - 80 m$  \n",
-    "$s = 2 - 5 m \\rightarrow  h = \\frac{l}{16} - \\frac{l}{18}$\n",
+    "$L = 10$ to $80$ m  \n",
+    "$s = 2$ to $5$ m $\\rightarrow  h = \\frac{L}{16}$ to $\\frac{L}{18}$\n",
     "```\n",
     "\n",
     "```{figure} Images/continuous_beam_shapes.png\n",
@@ -165,12 +168,12 @@
     "\n",
     "```{admonition} Rules of thumb\n",
     "**Solid timber**  \n",
-    "$l = 5 - 25 m$  \n",
-    "$s = 2.5 - 6 m \\rightarrow  h = \\frac{l}{10} - \\frac{l}{14}$  \n",
+    "$L = 5$ to $25$ m  \n",
+    "$s = 2.5$ to $6$ m $\\rightarrow  h = \\frac{L}{10}$ to $\\frac{L}{14}$  \n",
     "\n",
     "**Glulam**  \n",
-    "$l = 20 - 80 m$  \n",
-    "$s = 2.5 - 6 m \\rightarrow  h = \\frac{l}{10} - \\frac{l}{15}$\n",
+    "$L = 20$ to $80$ m  \n",
+    "$s = 2.5$ to $6$ m \\rightarrow  h = \\frac{L}{10}$ to $\\frac{L}{15}$\n",
     "```\n",
     "\n",
     "```{figure} Images/straight_truss_shapes.png\n",
@@ -197,12 +200,12 @@
     "\n",
     "```{admonition} Rules of thumb\n",
     "**Glulam beam**  \n",
-    "$l = 7.5 - 30 m$  \n",
-    "$s = 4 - 10 m \\rightarrow  h = \\frac{l}{10}$  \n",
+    "$L = 7.5$ to $30$ m  \n",
+    "$s = 4$ to $10$ m $\\rightarrow  h = \\frac{L}{10}$  \n",
     "\n",
     "**Glulam saddle roof**  \n",
-    "$l = 7.5 - 30 m$  \n",
-    "$s = 4 - 10 m \\rightarrow  h = \\frac{l}{12}$  \n",
+    "$l = 7.5$ to $30$ m  \n",
+    "$s = 4$ to $10$ m $\\rightarrow  h = \\frac{L}{12}$  \n",
     "```\n",
     "\n",
     "```{figure} Images/triangular_truss_shapes.png\n",
@@ -229,8 +232,8 @@
     "\n",
     "```{admonition} Rules of thumb\n",
     "**Glulam beam**  \n",
-    "$l = 8 - 80 m$  \n",
-    "$h = \\frac{l}{15} - \\frac{l}{20}$  \n",
+    "$L = 8$ to $80$ m  \n",
+    "$h = \\frac{L}{15}$ to $\\frac{L}{20}$  \n",
     "```\n",
     "\n",
     "```{figure} Images/under_stressed_beam_shapes.png\n",
@@ -257,9 +260,9 @@
     "\n",
     "```{admonition} Rules of thumb\n",
     "**Glulam beam**  \n",
-    "$l = 10 - 40 m$  \n",
-    "$s = 4 - 8 m$  \n",
-    "$h = \\frac{l}{15} - \\frac{l}{20}$  \n",
+    "$L = 10$ to $40$ m  \n",
+    "$s = 4$ to $8$ m  \n",
+    "$h = \\frac{L}{15} - \\frac{L}{20}$  \n",
     "```\n",
     "\n",
     "```{figure} Images/rigid_frame_shapes.png\n",
@@ -286,16 +289,16 @@
     "\n",
     "```{admonition} Rules of thumb\n",
     "**Glulam beams, no tensile bar**  \n",
-    "$l = 10 - 50 m$  \n",
-    "$f = \\frac{l}{3}$  \n",
-    "$s = 5 - 8 m$  \n",
-    "$h = \\frac{l}{30} - \\frac{l}{50}$  \n",
+    "$L = 10$ to $50$ m  \n",
+    "$f = \\frac{L}}{3}$  \n",
+    "$s = 5$ to $8$ m  \n",
+    "$h = \\frac{L}{30}$ to $\\frac{L}{50}$  \n",
     "\n",
     "**Glulam beams, with tensile bar**  \n",
-    "$l = 15 - 50 m$  \n",
-    "$f = \\frac{l}{6}$  \n",
-    "$s = 5 - 8 m$  \n",
-    "$h = \\frac{l}{30} - \\frac{l}{50}$  \n",
+    "$L = 15$ to $50$ m  \n",
+    "$f = \\frac{L}{6}$  \n",
+    "$s = 5 - 8$ m  \n",
+    "$h = \\frac{L}{30}$ to $\\frac{L}}{50}$  \n",
     "```\n",
     "\n",
     "```{figure} Images/three_hinged_frame_shapes.png\n",
@@ -304,9 +307,9 @@
     "Possible shapes.\n",
     "```\n",
     "```{Note}\n",
-    "$l = 15 - 50 m$  \n",
-    "$s = 5 - 8 m$  \n",
-    "$h = \\frac{l}{15} - \\frac{l}{25}$  \n",
+    "$L = 15$ to $50$ m  \n",
+    "$s = 5$ to $8$ m  \n",
+    "$h = \\frac{L}{15}$ to $\\frac{L}{25}$  \n",
     "```\n",
     "\n",
     "```{figure} Images/three_hinged_frame_details.png\n",
@@ -327,17 +330,17 @@
     "\n",
     "```{admonition} Rules of thumb\n",
     "**Frame with kinked corners**  \n",
-    "$l = 15 - 50 m$  \n",
+    "$L = 15$ to $50$ m  \n",
     "$\\alpha = 20 ^{\\circ}$  \n",
-    "$s = 4 - 5 m \\rightarrow h_{kink} = \\frac{l + g}{28} and h_{foot} = 0.4 \\cdot h_{kink}$  \n",
-    "$s = 5 - 9 m \\rightarrow h_{kink} = \\frac{l + g}{24} and h_{foot} = 0.4 \\cdot h_{kink}$  \n",
+    "$s = 4$ to $5$ m $\\rightarrow h_{kink} = \\frac{L + g}{28}$ and $h_{foot} = 0.4 \\cdot h_{kink}$  \n",
+    "$s = 5$ to $9$ m $\\rightarrow h_{kink} = \\frac{L + g}{24}$ and $h_{foot} = 0.4 \\cdot h_{kink}$  \n",
     "\n",
     "**Frame with bent corners**  \n",
-    "$l = 15 - 50 m$  \n",
-    "$r = 3.5 - 5 m$  \n",
-    "$\\alpha = 20 ^{\\circ}$\n",
-    "$s = 4 - 5 m \\rightarrow h_{kink} = \\frac{l + g}{31} and h_{ridge} = 0.5 \\cdot h_{kink} and h_{foot} = 0.67 \\cdot h_{kink}$  \n",
-    "$s = 5 - 9 m \\rightarrow h_{kink} = \\frac{l + g}{26} and h_{ridge} = 0.5 \\cdot h_{kink} and h_{foot} = 0.67 \\cdot h_{kink}$  \n",
+    "$L = 15$ to $50$ m  \n",
+    "$r = 3.5$ to $5$ m  \n",
+    "$\\alpha = 20 ^{\\circ}$  \n",
+    "$s = 4$ to $5$ m $\\rightarrow h_{kink} = \\frac{L + g}{31}$ and $h_{ridge} = 0.5 \\cdot h_{kink}$ and $h_{foot} = 0.67 \\cdot h_{kink}$  \n",
+    "$s = 5$ to $9$ m $\\rightarrow h_{kink} = \\frac{L + g}{26}$ and $h_{ridge} = 0.5 \\cdot h_{kink}$ and $h_{foot} = 0.67 \\cdot h_{kink}$  \n",
     "```\n",
     "\n",
     "```{figure} Images/three_hinged_kinked_shapes.png\n",
@@ -365,16 +368,16 @@
     "\n",
     "```{admonition} Rules of thumb\n",
     "**Glulam beam**  \n",
-    "$l = 20 - 100 m$  \n",
-    "$f = \\frac{l}{5} - \\frac{l}{7}$ \n",
-    "$s = \\leq 5 m \\rightarrow h = \\frac{l}{45}$  \n",
-    "$s = 5 - 9 m \\rightarrow h = \\frac{l}{40}$  \n",
+    "$L = 20$ to $100$ m  \n",
+    "$f = \\frac{L}{5}$ to $\\frac{L}{7}$  \n",
+    "$s = \\leq 5$ m $\\rightarrow h = \\frac{L}{45}$  \n",
+    "$s = 5$ to $9$ m $\\rightarrow h = \\frac{L}{40}$  \n",
     "\n",
     "**Glulam truss**  \n",
-    "$l = 50 - 120 m$  \n",
-    "$f = \\frac{l}{5} - \\frac{l}{8}$ \n",
-    "$s = 5 - 10 m$  \n",
-    "$h = \\frac{l}{20} - \\frac{l}{40}$\n",
+    "$L = 50$ to $120$ m  \n",
+    "$f = \\frac{L}{5}$ to $\\frac{L}{8}$  \n",
+    "$s = 5$ to $10$ m  \n",
+    "$h = \\frac{L}{20}$ to $\\frac{L}{40}$\n",
     "```\n",
     "\n",
     "```{figure} Images/arch_shapes.png\n",
@@ -398,7 +401,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python_Older_Jupyter_Books",
    "language": "python",
    "name": "python3"
   },
@@ -412,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.16"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
