--- a/book/design/steel/steel_structures.ipynb
+++ b/book/design/steel/steel_structures.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Steel - rules of thumb\n",
+    "## Rules of thumb\n",
+    "The 'rules of thumb' (Dutch: 'vuistregels') are to be seen as a quick way to estimate dimensions of structural members, mostly based on span. These *estimated* dimensions serve as input only for a early design stage calculation (e.g. check of capacity or deformation), after which you will use more advanced design rules (e.g. Eurocode) for a more accurate calculation. Mind that you should *not* use them the other way around, as if the rules of thumb were some law that should be respected.\n",
     "\n",
     "### Steel columns\n",
     "```{figure} Images/Steel_Columns1.jpg\n",
