center-to-center spacing clarified

--- a/book/design/concrete/spans_in_concrete.ipynb
+++ b/book/design/concrete/spans_in_concrete.ipynb
@@ -13,7 +13,7 @@
     "```\n",
     "\n",
     "## Rules of thumb\n",
-    "The 'rules of thumb' (Dutch: 'vuistregels') are to be seen as a quick way to estimate dimensions of structural members, mostly based on span. These *estimated* dimensions serve as input only for a early design stage calculation (e.g. check of capacity or deformation), after which you will use more advanced design rules (e.g. Eurocode) for a more accurate calculation. Mind that you should *not* use them the other way around, as if the rules of thumb were some law that should be respected.\n",
+    "These 'rules of thumb' (Dutch: 'vuistregels') are to be seen as a quick way to estimate dimensions of structural members, based on span $L$ and/or center-to-center spacing $s$. These *estimated* dimensions should only serve as input for an early design stage calculation (e.g. first check of capacity or deformation), after which you will use more advanced design rules (e.g. Eurocode) for a more accurate calculation. Mind that you should *not* use them the other way around, as if the rules of thumb were some law that should be respected. They are just meant to get your design started.\n",
     "\n",
     "```{figure} Images/Main_Floorbeams1.jpg\n",
     "--- \n",
