--- a/book/design/timber/timber_structures_and_details.ipynb
+++ b/book/design/timber/timber_structures_and_details.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Rules of thumb and details\n",
-    "The 'rules of thumb' (Dutch: 'vuistregels') are to be seen as a quick way to estimate dimensions of structural members, mostly based on span. These *estimated* dimensions serve as input only for a early design stage calculation (e.g. check of capacity or deformation), after which you will use more advanced design rules (e.g. Eurocode) for a more accurate calculation. Mind that you should *not* use them the other way around, as if the rules of thumb were some law that should be respected.\n",
+    "These 'rules of thumb' (Dutch: 'vuistregels') are to be seen as a quick way to estimate dimensions of structural members, based on span $L$ and/or center-to-center spacing $s$. These *estimated* dimensions should only serve as input for an early design stage calculation (e.g. first check of capacity or deformation), after which you will use more advanced design rules (e.g. Eurocode) for a more accurate calculation. Mind that you should *not* use them the other way around, as if the rules of thumb were some law that should be respected. They are just meant to get your design started.\n",
     "\n",
     "## Straight beam (possibly with precamber)\n",
     "```{figure} Images/straight_beam_precamber.png\n",
@@ -18,9 +18,7 @@
     "**Solid timber beams**  \n",
     "$L = 2$ to $6$ m  \n",
     "$h = \\frac{L}{15}$ to $\\frac{L}{20}$ m\n",
-    "```\n",
     "\n",
-    "```{admonition} Rules of thumb\n",
     "**Glulam (=glue-laminated) beams**  \n",
     "$L = 6$ to $30$ m  \n",
     "$s < 5$ m $\\rightarrow  h = \\frac{L}{17}$  \n",
@@ -51,7 +49,7 @@
     "$L = 30$ m  \n",
     "$s = 3.6$ to $5.4$ m  \n",
     "$a = 0.25 \\cdot L \\rightarrow  h = \\frac{L}{16}$ to $\\frac{L}{21}$  \n",
-    "$s = 3$ to $5$ m  \n",
+    "$s = 3$ to $5$ m ($s$ = center-to-center *spacing* of beams)  \n",
     "$a = 0.4 \\cdot L \\rightarrow  h = \\frac{L}{18}$ to $\\frac{L}{24}$\n",
     "```\n",
     "\n",
@@ -103,7 +101,7 @@
     "```{admonition} Rules of thumb\n",
     "**Glulam beams**  \n",
     "$L = 7$ to $40$ m  \n",
-    "$s = 5$ to $7 m \\rightarrow  h = \\frac{L}{14}$ to $\\frac{L}}{18}$  \n",
+    "$s = 5$ to $7 m \\rightarrow  h = \\frac{L}{14}$ to $\\frac{L}{18}$ ($s$ = center-to-center *spacing* of beams)  \n",
     "$f = \\frac{L}}{5}$ to $\\frac{L}{10}$  \n",
     "$r \\geq 6$ m\n",
     "```\n",
@@ -136,7 +134,7 @@
     "```{admonition} Rules of thumb\n",
     "**Glulam beams**  \n",
     "$L = 6$ to $30$ m  \n",
-    "$s < 5$ m $\\rightarrow  h = \\frac{L}{34}$  \n",
+    "$s < 5$ m $\\rightarrow  h = \\frac{L}{34}$ ($s$ = center-to-center *spacing* of beams)  \n",
     "$s = 5$ to $8$ m $\\rightarrow  h = \\frac{L}{30}$\n",
     "\n",
     "**Glulam trusses**  \n",
@@ -169,11 +167,11 @@
     "```{admonition} Rules of thumb\n",
     "**Solid timber**  \n",
     "$L = 5$ to $25$ m  \n",
-    "$s = 2.5$ to $6$ m $\\rightarrow  h = \\frac{L}{10}$ to $\\frac{L}{14}$  \n",
+    "$s = 2.5$ to $6$ m $\\rightarrow  h = \\frac{L}{10}$ to $\\frac{L}{14}$ ($s$ = center-to-center *spacing* of trusses)  \n",
     "\n",
     "**Glulam**  \n",
     "$L = 20$ to $80$ m  \n",
-    "$s = 2.5$ to $6$ m \\rightarrow  h = \\frac{L}{10}$ to $\\frac{L}{15}$\n",
+    "$s = 2.5$ to $6$ m $\\rightarrow  h = \\frac{L}{10}$ to $\\frac{L}{15}$\n",
     "```\n",
     "\n",
     "```{figure} Images/straight_truss_shapes.png\n",
@@ -201,7 +199,7 @@
     "```{admonition} Rules of thumb\n",
     "**Glulam beam**  \n",
     "$L = 7.5$ to $30$ m  \n",
-    "$s = 4$ to $10$ m $\\rightarrow  h = \\frac{L}{10}$  \n",
+    "$s = 4$ to $10$ m $\\rightarrow  h = \\frac{L}{10}$ ($s$ = center-to-center *spacing* of trusses)  \n",
     "\n",
     "**Glulam saddle roof**  \n",
     "$l = 7.5$ to $30$ m  \n",
@@ -261,7 +259,7 @@
     "```{admonition} Rules of thumb\n",
     "**Glulam beam**  \n",
     "$L = 10$ to $40$ m  \n",
-    "$s = 4$ to $8$ m  \n",
+    "$s = 4$ to $8$ m ($s$ = center-to-center *spacing* of frames)  \n",
     "$h = \\frac{L}{15} - \\frac{L}{20}$  \n",
     "```\n",
     "\n",
@@ -290,15 +288,15 @@
     "```{admonition} Rules of thumb\n",
     "**Glulam beams, no tensile bar**  \n",
     "$L = 10$ to $50$ m  \n",
-    "$f = \\frac{L}}{3}$  \n",
-    "$s = 5$ to $8$ m  \n",
+    "$f = \\frac{L}{3}$  \n",
+    "$s = 5$ to $8$ m ($s$ = center-to-center *spacing* of frames)  \n",
     "$h = \\frac{L}{30}$ to $\\frac{L}{50}$  \n",
     "\n",
     "**Glulam beams, with tensile bar**  \n",
     "$L = 15$ to $50$ m  \n",
     "$f = \\frac{L}{6}$  \n",
     "$s = 5 - 8$ m  \n",
-    "$h = \\frac{L}{30}$ to $\\frac{L}}{50}$  \n",
+    "$h = \\frac{L}{30}$ to $\\frac{L}{50}$  \n",
     "```\n",
     "\n",
     "```{figure} Images/three_hinged_frame_shapes.png\n",
@@ -306,9 +304,9 @@
     "---\n",
     "Possible shapes.\n",
     "```\n",
-    "```{Note}\n",
+    "```{admonition} Rules of thumb\n",
     "$L = 15$ to $50$ m  \n",
-    "$s = 5$ to $8$ m  \n",
+    "$s = 5$ to $8$ m ($s$ = center-to-center *spacing* of frames)  \n",
     "$h = \\frac{L}{15}$ to $\\frac{L}{25}$  \n",
     "```\n",
     "\n",
@@ -334,6 +332,7 @@
     "$\\alpha = 20 ^{\\circ}$  \n",
     "$s = 4$ to $5$ m $\\rightarrow h_{kink} = \\frac{L + g}{28}$ and $h_{foot} = 0.4 \\cdot h_{kink}$  \n",
     "$s = 5$ to $9$ m $\\rightarrow h_{kink} = \\frac{L + g}{24}$ and $h_{foot} = 0.4 \\cdot h_{kink}$  \n",
+    "($s$ = center-to-center *spacing* of frames)\n",
     "\n",
     "**Frame with bent corners**  \n",
     "$L = 15$ to $50$ m  \n",
@@ -341,6 +340,7 @@
     "$\\alpha = 20 ^{\\circ}$  \n",
     "$s = 4$ to $5$ m $\\rightarrow h_{kink} = \\frac{L + g}{31}$ and $h_{ridge} = 0.5 \\cdot h_{kink}$ and $h_{foot} = 0.67 \\cdot h_{kink}$  \n",
     "$s = 5$ to $9$ m $\\rightarrow h_{kink} = \\frac{L + g}{26}$ and $h_{ridge} = 0.5 \\cdot h_{kink}$ and $h_{foot} = 0.67 \\cdot h_{kink}$  \n",
+    "($s$ = center-to-center *spacing* of frames)\n",
     "```\n",
     "\n",
     "```{figure} Images/three_hinged_kinked_shapes.png\n",
@@ -370,7 +370,7 @@
     "**Glulam beam**  \n",
     "$L = 20$ to $100$ m  \n",
     "$f = \\frac{L}{5}$ to $\\frac{L}{7}$  \n",
-    "$s = \\leq 5$ m $\\rightarrow h = \\frac{L}{45}$  \n",
+    "$s = \\le 5$ m $\\rightarrow h = \\frac{L}{45}$  \n",
     "$s = 5$ to $9$ m $\\rightarrow h = \\frac{L}{40}$  \n",
     "\n",
     "**Glulam truss**  \n",
@@ -378,6 +378,7 @@
     "$f = \\frac{L}{5}$ to $\\frac{L}{8}$  \n",
     "$s = 5$ to $10$ m  \n",
     "$h = \\frac{L}{20}$ to $\\frac{L}{40}$\n",
+    "($s$ = center-to-center *spacing* of arches)\n",
     "```\n",
     "\n",
     "```{figure} Images/arch_shapes.png\n",
