--- a/book/design/timber/timber_structures_and_details.ipynb
+++ b/book/design/timber/timber_structures_and_details.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "**Glulam (=glue-laminated) beams**  \n",
     "$L = 6$ to $30$ m  \n",
-    "$s < 5$ m $\\rightarrow  h = \\frac{L}{17}$  \n",
+    "$s < 5$ m $\\rightarrow  h = \\frac{L}{17}$ ($s$ = center-to-center spacing of beams)  \n",
     "$s = 5$ to $8$ m $\\rightarrow  h = \\frac{l}{16}$\n",
     "```\n",
     "\n",
@@ -49,7 +49,7 @@
     "$L = 30$ m  \n",
     "$s = 3.6$ to $5.4$ m  \n",
     "$a = 0.25 \\cdot L \\rightarrow  h = \\frac{L}{16}$ to $\\frac{L}{21}$  \n",
-    "$s = 3$ to $5$ m ($s$ = center-to-center *spacing* of beams)  \n",
+    "$s = 3$ to $5$ m ($s$ = center-to-center spacing of beams)  \n",
     "$a = 0.4 \\cdot L \\rightarrow  h = \\frac{L}{18}$ to $\\frac{L}{24}$\n",
     "```\n",
     "\n",
@@ -101,8 +101,8 @@
     "```{admonition} Rules of thumb\n",
     "**Glulam beams**  \n",
     "$L = 7$ to $40$ m  \n",
-    "$s = 5$ to $7 m \\rightarrow  h = \\frac{L}{14}$ to $\\frac{L}{18}$ ($s$ = center-to-center *spacing* of beams)  \n",
-    "$f = \\frac{L}}{5}$ to $\\frac{L}{10}$  \n",
+    "$s = 5$ to $7 m \\rightarrow  h = \\frac{L}{14}$ to $\\frac{L}{18}$ ($s$ = center-to-center spacing of beams)  \n",
+    "$f = \\frac{L}{5}$ to $\\frac{L}{10}$  \n",
     "$r \\geq 6$ m\n",
     "```\n",
     "\n",
@@ -134,7 +134,7 @@
     "```{admonition} Rules of thumb\n",
     "**Glulam beams**  \n",
     "$L = 6$ to $30$ m  \n",
-    "$s < 5$ m $\\rightarrow  h = \\frac{L}{34}$ ($s$ = center-to-center *spacing* of beams)  \n",
+    "$s < 5$ m $\\rightarrow  h = \\frac{L}{34}$ ($s$ = center-to-center spacing of beams)  \n",
     "$s = 5$ to $8$ m $\\rightarrow  h = \\frac{L}{30}$\n",
     "\n",
     "**Glulam trusses**  \n",
@@ -167,7 +167,7 @@
     "```{admonition} Rules of thumb\n",
     "**Solid timber**  \n",
     "$L = 5$ to $25$ m  \n",
-    "$s = 2.5$ to $6$ m $\\rightarrow  h = \\frac{L}{10}$ to $\\frac{L}{14}$ ($s$ = center-to-center *spacing* of trusses)  \n",
+    "$s = 2.5$ to $6$ m $\\rightarrow  h = \\frac{L}{10}$ to $\\frac{L}{14}$ ($s$ = center-to-center spacing of trusses)  \n",
     "\n",
     "**Glulam**  \n",
     "$L = 20$ to $80$ m  \n",
@@ -199,7 +199,7 @@
     "```{admonition} Rules of thumb\n",
     "**Glulam beam**  \n",
     "$L = 7.5$ to $30$ m  \n",
-    "$s = 4$ to $10$ m $\\rightarrow  h = \\frac{L}{10}$ ($s$ = center-to-center *spacing* of trusses)  \n",
+    "$s = 4$ to $10$ m $\\rightarrow  h = \\frac{L}{10}$ ($s$ = center-to-center spacing of trusses)  \n",
     "\n",
     "**Glulam saddle roof**  \n",
     "$l = 7.5$ to $30$ m  \n",
@@ -259,7 +259,7 @@
     "```{admonition} Rules of thumb\n",
     "**Glulam beam**  \n",
     "$L = 10$ to $40$ m  \n",
-    "$s = 4$ to $8$ m ($s$ = center-to-center *spacing* of frames)  \n",
+    "$s = 4$ to $8$ m ($s$ = center-to-center spacing of frames)  \n",
     "$h = \\frac{L}{15} - \\frac{L}{20}$  \n",
     "```\n",
     "\n",
@@ -289,7 +289,7 @@
     "**Glulam beams, no tensile bar**  \n",
     "$L = 10$ to $50$ m  \n",
     "$f = \\frac{L}{3}$  \n",
-    "$s = 5$ to $8$ m ($s$ = center-to-center *spacing* of frames)  \n",
+    "$s = 5$ to $8$ m ($s$ = center-to-center spacing of frames)  \n",
     "$h = \\frac{L}{30}$ to $\\frac{L}{50}$  \n",
     "\n",
     "**Glulam beams, with tensile bar**  \n",
@@ -306,7 +306,7 @@
     "```\n",
     "```{admonition} Rules of thumb\n",
     "$L = 15$ to $50$ m  \n",
-    "$s = 5$ to $8$ m ($s$ = center-to-center *spacing* of frames)  \n",
+    "$s = 5$ to $8$ m ($s$ = center-to-center spacing of frames)  \n",
     "$h = \\frac{L}{15}$ to $\\frac{L}{25}$  \n",
     "```\n",
     "\n",
@@ -332,7 +332,7 @@
     "$\\alpha = 20 ^{\\circ}$  \n",
     "$s = 4$ to $5$ m $\\rightarrow h_{kink} = \\frac{L + g}{28}$ and $h_{foot} = 0.4 \\cdot h_{kink}$  \n",
     "$s = 5$ to $9$ m $\\rightarrow h_{kink} = \\frac{L + g}{24}$ and $h_{foot} = 0.4 \\cdot h_{kink}$  \n",
-    "($s$ = center-to-center *spacing* of frames)\n",
+    "($s$ = center-to-center spacing of frames)\n",
     "\n",
     "**Frame with bent corners**  \n",
     "$L = 15$ to $50$ m  \n",
@@ -340,7 +340,7 @@
     "$\\alpha = 20 ^{\\circ}$  \n",
     "$s = 4$ to $5$ m $\\rightarrow h_{kink} = \\frac{L + g}{31}$ and $h_{ridge} = 0.5 \\cdot h_{kink}$ and $h_{foot} = 0.67 \\cdot h_{kink}$  \n",
     "$s = 5$ to $9$ m $\\rightarrow h_{kink} = \\frac{L + g}{26}$ and $h_{ridge} = 0.5 \\cdot h_{kink}$ and $h_{foot} = 0.67 \\cdot h_{kink}$  \n",
-    "($s$ = center-to-center *spacing* of frames)\n",
+    "($s$ = center-to-center spacing of frames)\n",
     "```\n",
     "\n",
     "```{figure} Images/three_hinged_kinked_shapes.png\n",
@@ -377,8 +377,8 @@
     "$L = 50$ to $120$ m  \n",
     "$f = \\frac{L}{5}$ to $\\frac{L}{8}$  \n",
     "$s = 5$ to $10$ m  \n",
-    "$h = \\frac{L}{20}$ to $\\frac{L}{40}$\n",
-    "($s$ = center-to-center *spacing* of arches)\n",
+    "$h = \\frac{L}{20}$ to $\\frac{L}{40}$  \n",
+    "($s$ = center-to-center spacing of arches)\n",
     "```\n",
     "\n",
     "```{figure} Images/arch_shapes.png\n",
